--- a/02/README
+++ b/02/README
@@ -85,3 +85,9 @@ PATCH http://127.0.0.1:8000/web/users/1/
 }
 
 DELETE http://127.0.0.1:8000/web/users/2/
+
+GET http://127.0.0.1:8000/web/reviews/
+
+GET http://127.0.0.1:8000/web/reviews/?rating__gte=3&rating__lte=5 # rating >=3 y <=5
+
+GET http://127.0.0.1:8000/web/reviews/?search=cristhian
